--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
-
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="styles.css" /> -->
-    <script src="./asianPaints.js" defer></script>
-    <link rel="stylesheet" href="asianPaints.css">
-
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="styles.css">
   </head>
 
+
   <body>
-    <!-- the entire body must be written by student -->
-
-
-    
-    <div>
+    <h1>Asian Paints</h1>
+    <div class="top">
       <input type="text" placeholder="Enter block id" id="block_id" />
       <input type="text" placeholder="Enter colour id" id="colour_id" />
       <button id="change_button">Change</button>
       <button id="reset_button">Reset</button>
     </div>
+
     <div class="grid-container">
       <div class="grid-item" id="1">1</div>
       <div class="grid-item" id="2">2</div>
@@ -30,6 +26,6 @@
       <div class="grid-item" id="8">8</div>
       <div class="grid-item" id="9">9</div>
     </div>
-    <!-- <script type="text/javascript" src="./script.js"></script> -->
+   
   </body>
 </html>
